@@ -1,11 +1,12 @@
 package com.cocinadelicia.backend.common.config;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.*;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.core.GrantedAuthority;
@@ -16,42 +17,53 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.*;
 
 @Configuration
-@EnableMethodSecurity // habilita @PreAuthorize
+@EnableMethodSecurity
+// ⚠️ SIN @Profile aquí, así aplica en dev y prod
 class SecurityConfig {
 
   @Value("${cdd.security.groups-claim:cognito:groups}")
   private String groupsClaim;
 
   @Value("${cdd.security.required-audience:}")
-  private String requiredAudience; // opcional
+  private String requiredAudience;
 
   @Bean
   SecurityFilterChain apiSecurityFilterChain(HttpSecurity http) throws Exception {
-    http.csrf(csrf -> csrf.disable())
+    http
+        // 👇 Habilita CORS (usará el bean CorsConfigurationSource)
+        .cors(cors -> {})
+        .csrf(csrf -> csrf.disable())
+        .headers(h -> h.frameOptions(frame -> frame.sameOrigin())) // H2 en dev
         .authorizeHttpRequests(
             auth ->
                 auth
-                    // Públicos (swagger/health)
+                    // 👇 MUY IMPORTANTE: dejar pasar preflight
+                    .requestMatchers(HttpMethod.OPTIONS, "/**")
+                    .permitAll()
+
+                    // públicos
                     .requestMatchers(
-                        "/actuator/health", "/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html")
+                        "/actuator/health",
+                        "/v3/api-docs/**",
+                        "/swagger-ui/**",
+                        "/swagger-ui.html",
+                        "/h2-console/**")
                     .permitAll()
 
                     // Admin-only
                     .requestMatchers("/admin/**")
                     .hasRole("ADMIN")
-
                     // Chef o Admin
                     .requestMatchers("/chef/**")
                     .hasAnyRole("CHEF", "ADMIN")
 
-                    // API general: autenticado
-                    .requestMatchers("/api/**")
+                    // Tu API (requiere token)
+                    .requestMatchers("/**")
                     .authenticated()
 
-                    // Todo lo demás: denegado
+                    // resto denegado
                     .anyRequest()
                     .denyAll())
-        // Resource Server con JWT (Cognito)
         .oauth2ResourceServer(
             oauth2 ->
                 oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())));
@@ -68,21 +80,17 @@ class SecurityConfig {
   }
 
   private Collection<? extends GrantedAuthority> extractAuthoritiesFromJwt(Jwt jwt) {
-    // 1) grupos -> roles Spring
     List<String> groups = jwt.getClaimAsStringList(groupsClaim);
     if (groups == null) groups = List.of();
-
-    List<GrantedAuthority> roles =
+    var roles =
         groups.stream()
             .map(g -> new SimpleGrantedAuthority("ROLE_" + g.toUpperCase()))
             .collect(Collectors.toList());
 
-    // 2) (opcional) validar audience (app client id)
     if (requiredAudience != null && !requiredAudience.isBlank()) {
       List<String> aud = jwt.getAudience();
       if (aud == null || !aud.contains(requiredAudience)) {
-        // Si querés fallar duro, podrías lanzar una excepción aquí.
-        // O retornar lista vacía y que falle por autorización.
+        // opción: lanzar excepción si querés “fallar duro”
       }
     }
     return roles;
@@ -91,10 +99,14 @@ class SecurityConfig {
   @Bean
   CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration cors = new CorsConfiguration();
-    cors.setAllowedOrigins(List.of("http://localhost:5173", "https://www.lacocinadelicia.com"));
-    cors.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    cors.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+    // Para dev es más práctico usar patterns por puerto
+    cors.setAllowedOriginPatterns(List.of("http://localhost:*", "https://www.lacocinadelicia.com"));
+    cors.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+    cors.setAllowedHeaders(
+        Arrays.asList("Authorization", "Content-Type", "Accept", "Origin", "X-Requested-With"));
+    cors.setExposedHeaders(List.of("Location"));
     cors.setAllowCredentials(false);
+    cors.setMaxAge(3600L);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", cors);
